# wp3-hackathon

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
a_team/: README.md  __main__.py  client.py  test_client.py  tools.py
a_team/agents/: executor.py  scheduler.py
a_team/data/: employees.csv
a_team/schedule/: create.py
a_team/schedule/calendars/: 1.ics  2.ics  3.ics
group1/: .flake8  GEMINI.md  README.md  main.py  pyproject.toml  run_servers.py
group1/agents/: README.md
group1/agents/employee_catalog/: __main__.py  agent.py  agent_executor.py
group1/agents/employee_catalog/employee_catalog_mcp/: __main__.py  mock_data.py  prompts.py  server.py  tools.py
group1/agents/service_catalog/: __main__.py  agent.py  agent_executor.py
group1/agents/service_catalog/service_catalog_mcp/: __main__.py  mock_data.py  server.py
notebooks/: langchain_basics.ipynb  langchain_structured_output.ipynb  langchain_tool_calling.ipynb
notebooks/embeddings/: langchain_embeddings.ipynb
notebooks/langgraph/: langgraph_basics.ipynb  langgraph_branched_graphs.ipynb  langgraph_example_layouts.ipynb  langgraph_supervisor_agent.ipynb  langgraph_tool_calling.ipynb
notebooks/model-context-protocol/: fastmcp_basics.ipynb  fastmcp_server.py
team_alpha/: a2a_quickstart.ipynb
team_alpha/mock_data/: kurs_schema.csv  onboarding_kurser.csv  personal_schema.csv
