[project]
name = "wp3-hackathon"
version = "0.1.0"
description = "Agent examples "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.20",
    "faiss-cpu>=1.10.0",
    "fastmcp>=2.13.1",
    "google-adk>=1.20.0",
    "langchain>=1.1.3",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "litellm>=1.80.9",
    "numpy>=1.26.4",
    "openai>=1.109.1",
    "pandas>=2.3.2 ",
    "pydantic>=2.11.9",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
