[project]
name = "wp3-hackathon"
version = "0.1.0"
description = "Agent examples "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "faiss-cpu>=1.10.0",
    "fastmcp>=2.13.1",
    "ics>=0.7.2",
    "langchain>=1.1.3",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "numpy>=1.26.4",
    "openai>=1.109.1",
    "pandas>=2.3.2 ",
    "pydantic>=2.11.9",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv.workspace]
members = [
    "group1",
]
