[project]
name = "wp3-hackathon"
version = "0.1.0"
description = "Agent examples "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[all]>=0.3.20",
    "colorama>=0.4.6",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.111.0",
    "fastmcp>=2.13.3",
    "google-adk>=1.20.0",
    "ics>=0.7.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.1",
    "langchain>=1.1.3",
    "langgraph>=1.0.4",
    "langserve>=0.1.1",
    "litellm>=1.80.9",
    "mcp>=1.22.0",
    "numpy>=1.26.4",
    "openai>=1.109.1",
    "pandas>=2.3.2 ",
    "pydantic>=2.11.9",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv.workspace]
members = [
    "group1",
]
